# pepa-calculator

./: Cargo.toml  Makefile  README.md
src/: main.rs
src/pepa/: compute.rs  compute_tests.rs  constants.rs  expression.rs  functions.rs  generators.rs  lib.rs  parser.rs  parser_tests.rs  pepa.rs  unit_prefixes.rs  unit_prefixes_tests.rs  units.rs  units_length.rs  units_length_test.rs  units_mass.rs  units_mass_tests.rs  units_temperature.rs  units_temperature_tests.rs  units_tests.rs  units_time.rs  units_time_tests.rs  utils.rs  utils_tests.rs
src/pepa/units/: angle.rs  length.rs  length_tests.rs  mass.rs  mass_tests.rs  mod.rs  prefix.rs  prefix_tests.rs  temperature.rs  temperature_tests.rs  time.rs  time_tests.rs  unit.rs  units_tests.rs  volume.rs  volume_tests.rs
src/pepino/: calc.rs  compute.rs  computer.rs  constants.rs  expression.rs  functions.rs  generators.rs  lib.rs  operators.rs  parser.rs  unit_prefixes.rs  unit_prefixes_test.rs  units.rs  units_length.rs  units_temperature.rs  units_time.rs  utils.rs  utils_test.rs
tests/: calculation_tests.rs  calculations.rs  display.rs  explain.rs  explain_tests.rs  simple_calc.rs  units.rs  units_tests.rs
