[package]
name = "pepino"
description = "Text based calculator and unit convertor"
edition = "2021"
publish = false
version = "0.1.0"
authors = ["Dusan Saiko <dusan@saiko.cz>"]
license = "MIT"
repository = "https://github.com/dsaiko/pepino"
keywords = ["calculator", "calc"]
categories = ["algorithms", "mathematics", "command-line-utilities"]

[lib]
name = "pepino"
path = "src/pepino/lib.rs"

[[bin]]
name = "pepino"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.76", features = [] }
once_cell = "1.19.0"
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0.51"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

