[package]
name = "pepino"
description = "Text based calculator and unit convertor"
edition = "2021"
publish = false
version = "0.1.0"
authors = ["Dusan Saiko <dusan@saiko.cz>"]
license = "MIT"
repository = "https://github.com/dsaiko/pepino"
keywords = ["calculator", "calc"]
categories = ["algorithms", "mathematics", "command-line-utilities"]

[lib]
name = "pepino"
path = "src/pepino/lib.rs"

[[bin]]
name = "pepino"
path = "src/main.rs"

[dependencies]
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0.51"
fastrand = "2.0.1"
rust_decimal = { version = "1.33.1", default-features = false, features = ["maths"] }
rust_decimal_macros = "1.33.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

